--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Albert Dieter Rodriguez</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
 	
 
 </head>
 <body>
 	<div class="title">
 	<h1>ALBERT DIETER RODRIGUEZ</h1>
+
 </div>
 <div class="subtitle">
-	<p>3148 NW 134th St<br>Opa Locka, Florida, 33054<br>+(305) 300-3080</p><a href="index.html">Albert.dieterk@gmail.com</a>
+	<p>3148 NW 134th St<br>Opa Locka, Florida, 33054<br>+(305) 300-3080</p><a href="mailto:Albert.dieterk@gmail.com?subject=Contact">Albert.dieterk@gmail.com</a>
 </div>
 <div class="text">
+	<a href="https://github.com/Ladcow">
+	<i class="fab fa-github"></i>
+	</a>
 	<h3>Work Experience</h3>
 	<h5>Positive Behavior Supports</h5>
 	<h6>Registered Behavior Technician</h6>
